Fix tooltip name alignment

--- a/SoloLearn/src/styles/root.scss
+++ b/SoloLearn/src/styles/root.scss
@@ -60,10 +60,6 @@ html, body {
 	}
 }
 
-.tippy-popper {
-	z-index: 998 !important;
-}
-
 .sidebar-placeholder {
 	position: relative;
 	width: 300px;
